--- a/src/char_classification/train_file.ipynb
+++ b/src/char_classification/train_file.ipynb
@@ -1,95 +1,78 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "LP_Recognition.ipynb",
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "accelerator": "GPU"
-  },
   "cells": [
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "gmRlqcvMQUDJ",
-        "colab_type": "code",
-        "outputId": "07c1fe81-717a-4b97-ace1-d2fc23004909",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        }
+        },
+        "colab_type": "code",
+        "id": "gmRlqcvMQUDJ",
+        "outputId": "07c1fe81-717a-4b97-ace1-d2fc23004909"
       },
-      "source": [
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')"
-      ],
-      "execution_count": 0,
       "outputs": [
         {
+          "name": "stdout",
           "output_type": "stream",
           "text": [
             "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
-          ],
-          "name": "stdout"
+          ]
         }
+      ],
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "jagkCNPOQKNR",
-        "colab_type": "code",
-        "outputId": "464a0511-851a-4607-bccd-048d2d5ae7f4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        }
+        },
+        "colab_type": "code",
+        "id": "jagkCNPOQKNR",
+        "outputId": "464a0511-851a-4607-bccd-048d2d5ae7f4"
       },
-      "source": [
-        "%cd /content/drive/My\\ Drive/LP_Recognition"
-      ],
-      "execution_count": 0,
       "outputs": [
         {
+          "name": "stdout",
           "output_type": "stream",
           "text": [
             "/content/drive/My Drive/LP_Recognition\n"
-          ],
-          "name": "stdout"
+          ]
         }
+      ],
+      "source": [
+        "%cd /content/drive/My\\ Drive/LP_Recognition"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "NS_5W_vEQqdN",
-        "colab_type": "code",
-        "outputId": "0369a713-a73e-4768-c6c2-03779578cc52",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 782
-        }
+        },
+        "colab_type": "code",
+        "id": "NS_5W_vEQqdN",
+        "outputId": "0369a713-a73e-4768-c6c2-03779578cc52"
       },
-      "source": [
-        "from model import CNN_Model\n",
-        "\n",
-        "model = CNN_Model(trainable=True)"
-      ],
-      "execution_count": 0,
       "outputs": [
         {
+          "name": "stderr",
           "output_type": "stream",
           "text": [
             "Using TensorFlow backend.\n"
-          ],
-          "name": "stderr"
+          ]
         },
         {
+          "name": "stdout",
           "output_type": "stream",
           "text": [
             "Model: \"sequential\"\n",
@@ -136,28 +119,30 @@
             "The number of train digits data:  13732\n",
             "-------------DONE------------\n",
             "The number of train alphas data:  1983\n"
-          ],
-          "name": "stdout"
+          ]
         }
+      ],
+      "source": [
+        "from model import CNN_Model\n",
+        "\n",
+        "model = CNN_Model(trainable=True)"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "RyOFTwBrRCRU",
-        "colab_type": "code",
-        "outputId": "44a04989-c8a8-4832-f927-17ef4b59e9e9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "colab_type": "code",
+        "id": "RyOFTwBrRCRU",
+        "outputId": "44a04989-c8a8-4832-f927-17ef4b59e9e9"
       },
-      "source": [
-        "model.train()"
-      ],
-      "execution_count": 0,
       "outputs": [
         {
+          "name": "stdout",
           "output_type": "stream",
           "text": [
             "Training......\n",
@@ -223,10 +208,29 @@
             "197/197 [==============================] - 2s 9ms/step - loss: 0.0254 - acc: 0.9927 - val_loss: 0.0422 - val_acc: 0.9912 - lr: 2.0000e-04\n",
             "Epoch 30/30\n",
             "197/197 [==============================] - 1s 7ms/step - loss: 0.0248 - acc: 0.9930 - val_loss: 0.0435 - val_acc: 0.9899 - lr: 2.0000e-04\n"
-          ],
-          "name": "stdout"
+          ]
         }
+      ],
+      "source": [
+        "model.train()"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "name": "LP_Recognition.ipynb",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python",
+      "version": "3.9.8"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
